build: use deb launcher with launcherBack.sh